--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -6,16 +6,16 @@ trigger:
 
 variables:
   # Azure Resource Group where the Resources will be deployed
-  resourceGroupName: 'django-mauwiidev'
+  resourceGroupName: 'django_gh'
   # Location of the Resourcegroup
   location: 'westeurope'
   # ARM Service Connection
-  azureSubscription: 'django-mauwii-arm'
+  azureSubscription: 'django_gh'
   # Web app name
-  webAppName: 'django-mauwiidevoqchu5wfujocm'
-  # Environment name
-  environmentName: 'django-mauwiidevoqchu5wfujocm'
-  # environmentType: 'Test'
+  webAppName: 'djangogh-dev'
+  # Environment
+  environmentName: 'developmment'
+  environmentType: 'dev'
   # Project root folder. Point to the folder containing manage.py file.
   projectRoot: '$(System.DefaultWorkingDirectory)/django_webapp'
   # Python version:
@@ -31,16 +31,16 @@ stages:
     dependsOn:
     displayName: Bicep Validation
     jobs:
-      - template: pipelines/Bicep_Validation.yml
+    - template: pipelines/validate_bicep.yml
 
   - stage: BuildWebApp
     dependsOn:
     displayName: 'Build and publish Artifact'
     jobs:
-      - job: BuildWebApp
-        displayName: 'Build Web App'
-        steps:
-          - template: CI/build_webapp.yml
+    - job: BuildWebApp
+      displayName: 'Build Web App'
+      steps:
+        - template: pipelines/build_webapp.yml
 
   - stage: CreateResources
     displayName: Create Azure Resources
@@ -49,26 +49,26 @@ stages:
     - BuildWebApp
     condition: succeeded()
     jobs:
-      - deployment: DeployBicep
-        displayName: Create Azure Resources
-        environment: $(environmentName)
-        strategy:
-          runOnce:
-            deploy:
-              steps:
-                - checkout: self
-                - template: CI/bicep.yml
+    - deployment: DeployBicep
+      displayName: Create Azure Resources
+      environment: $(environmentName)
+      strategy:
+        runOnce:
+          deploy:
+            steps:
+              - checkout: self
+              - template: pipelines/deploy_bicep.yml
 
   - stage: DeployWebApp
     displayName: Deploy WebApp
     dependsOn: CreateResources
     condition: succeeded()
     jobs:
-      - deployment: DeployDjango
-        displayName: 'Deploy Django to WebApp'
-        environment: $(environmentName)
-        strategy:
-          runOnce:
-            deploy:
-              steps:
-                - template: CI/deploy_webapp.yml
+    - deployment: DeployDjango
+      displayName: 'Deploy Django to WebApp'
+      environment: $(environmentName)
+      strategy:
+        runOnce:
+          deploy:
+            steps:
+              - template: pipelines/deploy_webapp.yml
