--- a/pipelines/validate_pr.yml
+++ b/pipelines/validate_pr.yml
@@ -29,7 +29,7 @@ stages:
     dependsOn:
     displayName: Bicep Validation
     jobs:
-      - template: Bicep_Validation.yml
+      - template: validate_bicep.yml
 
   - stage: BuildWebApp
     dependsOn:
