use Variable Group in build step

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -52,6 +52,8 @@ stages:
   dependsOn: CreateResources
   condition: succeeded()
   displayName: 'Build and publish Artifact'
+  variables:
+  - group: djangogh-dev
   jobs:
   - job: BuildWebApp
     displayName: 'Build Web App'
