fix triggers they where wrong from experiments in a earlier project

--- a/pipelines/validate_pr.yml
+++ b/pipelines/validate_pr.yml
@@ -1,7 +1,10 @@
 pr:
   branches:
-    exclude:
+    include:
     - main
+  paths:
+    exclude:
+      - .gitignore
 
 variables:
 - group: django_gh
