add flag to checkout submodules

--- a/pipelines/validate_pr.yml
+++ b/pipelines/validate_pr.yml
@@ -32,4 +32,5 @@ stages:
     - group: django-superuser
     steps:
       - checkout: self
+        submodules: true
       - template: build_webapp.yml
