add flag to persist credentials

--- a/pipelines/validate_pr.yml
+++ b/pipelines/validate_pr.yml
@@ -33,4 +33,5 @@ stages:
     steps:
       - checkout: self
         submodules: true
+        persistCredentials: true
       - template: build_webapp.yml
