--- a/pipelines/validate_pr.yml
+++ b/pipelines/validate_pr.yml
@@ -14,6 +14,14 @@ variables:
 pool:
   vmImage: ubuntu-latest
 
+resources:
+  repositories:
+    - repository: self
+      type: github
+      endpoint: Mauwii
+      name: mauwii/django_devops
+      ref: main
+
 stages:
 
 - stage: ValidateBicep
