--- a/.gitmodules
+++ b/.gitmodules
@@ -1,3 +1,3 @@
 [submodule "django_webapp"]
 	path = django_webapp
-	url = git@github.com:Mauwii/msdocs-python-django-webapp-quickstart.git
+	url = https://github.com/Mauwii/msdocs-python-django-webapp-quickstart.git
