--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -39,6 +39,7 @@ stages:
       runOnce:
         deploy:
           steps:
+          - checkout: self
           - template: pipelines/deploy_bicep.yml
 
 - stage: BuildWebApp
