remove ".." in path to template again

--- a/pipelines/deploy_bicep.yml
+++ b/pipelines/deploy_bicep.yml
@@ -11,7 +11,7 @@ steps:
         az deployment group create \
           --name $(Build.BuildNumber) \
           --resource-group $(ResourceGroupName) \
-          --template-file ../main.bicep \
+          --template-file main.bicep \
           --parameters secretKey=$(secretKey)
     env:
       secretKey: $(secretKey)
