add publish_artifact.yml pipeline-template moved creation and publification of build artifact to seperate template

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -53,6 +53,7 @@ stages:
     - checkout: self
       submodules: true
     - template: pipelines/build_webapp.yml
+    - template: pipelines/publish_artifact.yml
 
 - stage: DeployWebApp
   displayName: Deploy WebApp
