Try to fix doubled Runs as stated in [dg-9]

--- a/pipelines/validate_pr.yml
+++ b/pipelines/validate_pr.yml
@@ -1,13 +1,12 @@
 pr:
   branches:
-    include:
+    exclude:
     - main
   paths:
-    exclude:
-      - .gitignore
-      - .github/*
-      - ./**/*.md
-      - ./*.md
+    include:
+    - django-webapp/**/*.py
+    - pipelines/*.yml
+    - azure-pipelines.yml
 
 variables:
 - group: django_gh
