--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -1,13 +1,13 @@
 trigger:
+  batch: true
   branches:
     include:
-      - main
+    - main
   paths:
-    exclude:
-    - django_webapp/.gitignore
-    - django_webapp/.github/*
-    - django_webapp/**/*.md
-    - ./**/*.md
+    include:
+    - django-webapp/**/*.py
+    - pipelines/*.yml
+    - azure-pipelines.yml
 
 variables:
 - group: django_gh
