remove wildcards from paths in azure-pipelines

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -5,8 +5,8 @@ trigger:
       - main
   paths:
     include:
-      - django-webapp/**/*.py
-      - pipelines/*.yml
+      - django-webapp
+      - pipelines
       - azure-pipelines.yml
 
 variables:
