--- a/.gitmodules
+++ b/.gitmodules
@@ -3,4 +3,4 @@
 	url = https://github.com/Mauwii/msdocs-python-django-webapp-quickstart.git
 [submodule "mkdocs-material"]
 	path = mkdocs-material
-	url = git@github.com:squidfunk/mkdocs-material.git
+	url = https://github.com/squidfunk/mkdocs-material.git
