--- a/pipelines/publish_mkdocs.yml
+++ b/pipelines/publish_mkdocs.yml
@@ -1,5 +1,8 @@
 steps:
 
+  - checkout: self
+    submodules: true
+
   - task: UsePythonVersion@0
     inputs:
       versionSpec: '$(pythonVersion)'
