--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -7,15 +7,12 @@ repo_name: mauwii/django_devops
 theme:
   name: null
   custom_dir: mkdocs-material/material
-
   # 404 page
   static_templates:
     - 404.html
-
   # Necessary for search to work properly
   include_search_page: false
   search_index_only: true
-
   # Default values, taken from mkdocs_theme.yml
   language: en
   font:
@@ -34,23 +31,31 @@ theme:
         icon: material/weather-night
         name: Switch to light mode
 
-
 markdown_extensions:
+  - attr_list
+  - def_list
+  - footnotes
+  - md_in_html
+  - meta
   - pymdownx.emoji:
       emoji_index: !!python/name:materialx.emoji.twemoji
       emoji_generator: !!python/name:materialx.emoji.to_svg
       options:
         custom_icons:
           - overrides/.icons
+  - pymdownx.highlight:
+      anchor_linenums: true
+  - pymdownx.inlinehilite
+  - pymdownx.snippets
   - pymdownx.superfences:
       custom_fences:
         - name: mermaid
           class: mermaid
           format: !!python/name:pymdownx.superfences.fence_code_format
-  - pymdownx.highlight:
-      anchor_linenums: true
-  - pymdownx.inlinehilite
-  - pymdownx.snippets
-  - pymdownx.superfences
-  - attr_list
-  - md_in_html
+  - pymdownx.tabbed:
+      alternate_style: true
+  - pymdownx.tasklist:
+      custom_checkbox: true
+  - toc:
+      permalink: true
+      permalink_title: Anchor link to this section for reference
