--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,26 +1,71 @@
-site_name: 'Azure-DevOps with GitHub Repo and Jira'
-site_description: 'Playground to find out more about the possibilitys when using Azure-DevOps to run YAML Pipelines with a GitHub Repository and track Problems in Jira'
-site_author: 'mauwii'
-repo_url: https://github.com/mauwii/django_devops
-repo_name: mauwii/django_devops
+# Copyright (c) 2016-2022 Matthias Wild <mauwii@outlook.de>
 
+# Permission is hereby granted, free of charge, to any person obtaining a copy
+# of this software and associated documentation files (the "Software"), to
+# deal in the Software without restriction, including without limitation the
+# rights to use, copy, modify, merge, publish, distribute, sublicense, and/or
+# sell copies of the Software, and to permit persons to whom the Software is
+# furnished to do so, subject to the following conditions:
+
+# The above copyright notice and this permission notice shall be included in
+# all copies or substantial portions of the Software.
+
+# THE SOFTWARE IS PROVIDED "AS IS", WITHOUT WARRANTY OF ANY KIND, EXPRESS OR
+# IMPLIED, INCLUDING BUT NOT LIMITED TO THE WARRANTIES OF MERCHANTABILITY,
+# FITNESS FOR A PARTICULAR PURPOSE AND NON-INFRINGEMENT. IN NO EVENT SHALL THE
+# AUTHORS OR COPYRIGHT HOLDERS BE LIABLE FOR ANY CLAIM, DAMAGES OR OTHER
+# LIABILITY, WHETHER IN AN ACTION OF CONTRACT, TORT OR OTHERWISE, ARISING
+# FROM, OUT OF OR IN CONNECTION WITH THE SOFTWARE OR THE USE OR OTHER DEALINGS
+# IN THE SOFTWARE.
+
+# Project information
+site_name: Azure-DevOps with GitHub-Repo
+site_url: https://Mauwii.github.io/django_devops
+site_author: Matthias Wild
+site_description: >-
+  Welcom to my Playground which I created to find out more about the
+  possibilitys when using a GitHub-Repo in Azure-DevOps to run YAML
+  Files as Azure-Pipelines. Aditionally Jira is used as Issue Tracker.
+
+# Repository
+repo_name: Mauwii/django_devops
+repo_url: https://github.com/mauwii/django_devops
+
+# Copyright
+copyright: Copyright &copy; 2022 Copyright &copy; 2022 Matthias Wild
+
+# Configuration
 theme:
   name: null
-  custom_dir: mkdocs-material/material
+  custom_dir: !ENV [THEME_DIR, "mkdocs-material/material"]
+
   # 404 page
   static_templates:
     - 404.html
+
   # Necessary for search to work properly
   include_search_page: false
   search_index_only: true
+
   # Default values, taken from mkdocs_theme.yml
   language: en
-  font:
-    text: Roboto
-    code: Roboto Mono
-  favicon: assets/favicon.png
-  icon:
-    logo: logo
+  features:
+    - content.code.annotate
+    # - content.tabs.link
+    # - header.autohide
+    - navigation.expand
+    - navigation.indexes
+    # - navigation.instant
+    - navigation.sections
+    # - navigation.tabs
+    # - navigation.tabs.sticky
+    # - navigation.top
+    - navigation.tracking
+    - search.highlight
+    - search.share
+    - search.suggest
+    - toc.follow
+    - toc.integrate
   palette: 
     - scheme: default
       toggle:
@@ -30,13 +75,41 @@ theme:
       toggle:
         icon: material/weather-night
         name: Switch to light mode
+  font:
+    text: Roboto
+    code: Roboto Mono
+  favicon: assets/favicon.png
+  icon:
+    logo: material/library
 
+# Plugins
+plugins:
+  - search
+  - minify:
+      minify_html: true
+
+# Customization
+extra:
+  social:
+    - icon: fontawesome/brands/github
+      link: https://github.com/mauwii
+    - icon: fontawesome/brands/keybase
+      link: https://keybase.io/mauwi
+    - icon: material/email-fast
+      link: mailto:mauwii@outlook.de
+
+# Extensions
 markdown_extensions:
+  - abbr
+  - admonition
   - attr_list
   - def_list
   - footnotes
-  - md_in_html
   - meta
+  - md_in_html
+  - pymdownx.betterem:
+      smart_enable: all
+  - pymdownx.details
   - pymdownx.emoji:
       emoji_index: !!python/name:materialx.emoji.twemoji
       emoji_generator: !!python/name:materialx.emoji.to_svg
@@ -46,6 +119,7 @@ markdown_extensions:
   - pymdownx.highlight:
       anchor_linenums: true
   - pymdownx.inlinehilite
+  - pymdownx.smartsymbols
   - pymdownx.snippets
   - pymdownx.superfences:
       custom_fences:
@@ -59,3 +133,13 @@ markdown_extensions:
   - toc:
       permalink: true
       permalink_title: Anchor link to this section for reference
+  - pymdownx.tilde
+
+nav:
+  - About: index.md
+  - Current Workflow: workflow.md
+  - Reference: 
+    - reference/index.md
+    - Diagrams: reference/diagrams.md
+    - Images: reference/images.md
+  - License: license.md
