--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -8,6 +8,9 @@ trigger:
       - django-webapp
       - pipelines
       - azure-pipelines.yml
+    exclude:
+      - docs
+      - mkdocs.yml
 
 variables:
   - group: django_gh
