--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -1,4 +1,4 @@
-# Copyright (c) 2016-2022 Matthias Wild <mauwii@outlook.de>
+# Copyright (c) 2022 Matthias Wild <mauwii@outlook.de>
 
 # Permission is hereby granted, free of charge, to any person obtaining a copy
 # of this software and associated documentation files (the "Software"), to
@@ -20,7 +20,7 @@
 
 # Project information
 site_name: Azure-DevOps with GitHub-Repo
-site_url: https://Mauwii.github.io/django_devops
+site_url: !ENV [SITE_URL,'https://Mauwii.github.io/django_devops/']
 site_author: Matthias Wild
 site_description: >-
   Welcom to my Playground which I created to find out more about the
@@ -28,8 +28,8 @@ site_description: >-
   Files as Azure-Pipelines. Aditionally Jira is used as Issue Tracker.
 
 # Repository
-repo_name: Mauwii/django_devops
-repo_url: https://github.com/mauwii/django_devops
+repo_name: mauwii/django_devops
+repo_url: https://github.com/Mauwii/django_devops/
 edit_uri: edit/main/docs/
 
 # Copyright
@@ -52,11 +52,11 @@ theme:
   language: en
   features:
     - content.code.annotate
-    # - content.tabs.link
+    - content.tabs.link
     # - header.autohide
     - navigation.expand
     - navigation.indexes
-    # - navigation.instant
+    - navigation.instant
     - navigation.sections
     # - navigation.tabs
     # - navigation.tabs.sticky
@@ -67,21 +67,23 @@ theme:
     - search.suggest
     - toc.follow
     - toc.integrate
-  palette: 
-    - scheme: default
+  palette:
+    - media: '(prefers-color-scheme: light)'
+      scheme: default
       toggle:
-        icon: material/weather-sunny 
+        icon: material/toggle-switch-off-outline
         name: Switch to dark mode
-    - scheme: slate 
+    - media: '(prefers-color-scheme: dark)'
+      scheme: slate
       toggle:
-        icon: material/weather-night
+        icon: material/toggle-switch
         name: Switch to light mode
   font:
     text: Roboto
     code: Roboto Mono
-  favicon: assets/favicon.png
+  favicon: 'assets/favicon.png'
   icon:
-    logo: material/library
+    logo: 'material/library'
 
 # Customization
 extra:
@@ -130,11 +132,11 @@ markdown_extensions:
       permalink_title: Anchor link to this section for reference
   - pymdownx.tilde
 
-nav:
-  - About: index.md
-  - Current Workflow: workflow.md
-  - Reference: 
-    - reference/index.md
-    - Diagrams: reference/diagrams.md
-    - Images: reference/images.md
-  - License: license.md
+# nav:
+#   - About: index.md
+#   - Current Workflow: workflow.md
+#   - Reference:
+#     - reference/index.md
+#     - Diagrams: reference/diagrams.md
+#     - Images: reference/images.md
+#   - License: license.md
