remove batch option from pipelines

--- a/pipelines/publish_docs.yml
+++ b/pipelines/publish_docs.yml
@@ -1,12 +1,11 @@
 trigger:
-  batch: 'true'
   branches:
     include:
-      - 'main'
+      - main
   paths:
     include:
-      - 'docs'
-      - 'mkdocs.yml'
+      - docs
+      - mkdocs.yml
 
 pool:
   vmImage: ubuntu-latest
