--- a/mkdocs.yml
+++ b/mkdocs.yml
@@ -23,9 +23,9 @@ site_name: Azure-DevOps with GitHub-Repo
 site_url: !ENV [SITE_URL,'https://Mauwii.github.io/django_devops/']
 site_author: Matthias Wild
 site_description: >-
-  Welcom to my Playground which I created to find out more about the
-  possibilitys when using a GitHub-Repo in Azure-DevOps to run YAML
-  Files as Azure-Pipelines. Aditionally Jira is used as Issue Tracker.
+  Welcome to my Playground which I created to find out more about the
+  possibilities when using a GitHub-Repo in Azure-DevOps to run YAML
+  Files as Azure-Pipelines. Additionally Jira is used as Issue Tracker.
 
 # Repository
 repo_name: mauwii/django_devops
@@ -58,8 +58,8 @@ theme:
     - navigation.indexes
     - navigation.instant
     - navigation.sections
-    # - navigation.tabs
-    # - navigation.tabs.sticky
+    - navigation.tabs
+    - navigation.tabs.sticky
     # - navigation.top
     - navigation.tracking
     - search.highlight
@@ -104,39 +104,35 @@ markdown_extensions:
   - footnotes
   - meta
   - md_in_html
+  - toc:
+      permalink: true
+  - pymdownx.arithmatex:
+      generic: true
   - pymdownx.betterem:
       smart_enable: all
+  - pymdownx.caret
   - pymdownx.details
   - pymdownx.emoji:
       emoji_index: !!python/name:materialx.emoji.twemoji
       emoji_generator: !!python/name:materialx.emoji.to_svg
-      options:
-        custom_icons:
-          - overrides/.icons
   - pymdownx.highlight:
       anchor_linenums: true
   - pymdownx.inlinehilite
+  - pymdownx.keys
+  - pymdownx.magiclink:
+      repo_url_shorthand: true
+      user: Mauwii
+      repo: django_devops
+  - pymdownx.mark
   - pymdownx.smartsymbols
-  - pymdownx.snippets
   - pymdownx.superfences:
       custom_fences:
         - name: mermaid
           class: mermaid
           format: !!python/name:pymdownx.superfences.fence_code_format
+  - pymdownx.snippets
   - pymdownx.tabbed:
       alternate_style: true
   - pymdownx.tasklist:
       custom_checkbox: true
-  - toc:
-      permalink: true
-      permalink_title: Anchor link to this section for reference
   - pymdownx.tilde
-
-# nav:
-#   - About: index.md
-#   - Current Workflow: workflow.md
-#   - Reference:
-#     - reference/index.md
-#     - Diagrams: reference/diagrams.md
-#     - Images: reference/images.md
-#   - License: license.md
