--- a/pipelines/publish_docs.yml
+++ b/pipelines/publish_docs.yml
@@ -1,11 +1,12 @@
+# specific path build
 trigger:
   branches:
     include:
-      - main
+    - main
   paths:
     include:
-      - docs
-      - mkdocs.yml
+    - docs
+    - mkdocs.yml
 
 pool:
   vmImage: ubuntu-latest
