Added a GitHub-Template for Feature Requests also added: - a .nojekyll file - updated Code of Conduct - text corrections in todo - disable autocancel in pr-validation - reenable batch in azure-pipelines - add .gitattributes - updated django_webapp submodule to latest version

--- a/pipelines/validate_pr.yml
+++ b/pipelines/validate_pr.yml
@@ -1,14 +1,14 @@
 pr:
   drafts: true
-  autoCancel: true
+  autoCancel: false
   branches:
     exclude:
-      - main
+    - main
   paths:
     include:
-      - django-webapp/**/*.py
-      - pipelines/*.yml
-      - azure-pipelines.yml
+    - django-webapp
+    - pipelines
+    - azure-pipelines.yml
 
 variables:
   - group: django_gh
