checkout subodules before run_tests

--- a/pipelines/validate_pr.yml
+++ b/pipelines/validate_pr.yml
@@ -45,4 +45,6 @@ stages:
       - job: RunTests
         displayName: Run Unit Tests
         steps:
+          - checkout: self
+            submodules: true
           - template: run_tests.yml
