add run_tests to BuildWebApp

--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -53,6 +53,7 @@ stages:
             submodules: true
           - template: pipelines/build_webapp.yml
           - template: pipelines/publish_artifact.yml
+          - template: run_tests.yml
 
   - stage: DeployWebApp
     displayName: Deploy WebApp
