pipeline fixes also added prettierrc and use prettier remove django_webapp from triggers remove yml from .editorconfig

--- a/pipelines/publish_docs.yml
+++ b/pipelines/publish_docs.yml
@@ -1,22 +1,16 @@
-# specific path build
 trigger:
   branches:
+    exclude:
+      - '*'
     include:
-    - main
+      - main
   paths:
     include:
-    - docs
-    - mkdocs.yml
+      - docs
+      - mkdocs.yml
 
 pool:
   vmImage: ubuntu-latest
-
-resources:
-  repositories:
-    - repository: 'self'
-      type: 'github'
-      endpoint: 'Mauwii'
-      name: 'mauwii/django_devops'
 
 steps:
 
@@ -30,13 +24,13 @@ steps:
       versionSpec: '3.9'
       addToPath: true
       architecture: 'x64'
-  
+
   - task: Bash@3
     displayName: 'Install MkDocs'
     inputs:
       targetType: 'inline'
       script: 'pip install -e mkdocs-material'
-  
+
   - task: Bash@3
     displayName: 'Build mkdocs'
     inputs:
