--- a/azure-pipelines.yml
+++ b/azure-pipelines.yml
@@ -2,12 +2,11 @@ trigger:
   batch: true
   branches:
     include:
-    - main
+      - main
   paths:
     include:
-    - django_webapp
-    - pipelines
-    - azure-pipelines.yml
+      - pipelines
+      - azure-pipelines.yml
 
 variables:
   - group: django_gh
@@ -38,6 +37,7 @@ stages:
             deploy:
               steps:
                 - checkout: self
+                  submodules: false
                 - template: pipelines/deploy_bicep.yml
 
   - stage: BuildWebApp
@@ -52,6 +52,7 @@ stages:
             submodules: true
           - template: pipelines/build_webapp.yml
           - template: pipelines/publish_artifact.yml
+          - template: pipelines/run_tests.yml
 
   - stage: DeployWebApp
     displayName: Deploy WebApp
