--- a/pipelines/validate_pr.yml
+++ b/pipelines/validate_pr.yml
@@ -1,14 +1,10 @@
 pr:
   drafts: true
   autoCancel: false
-  branches:
-    exclude:
-    - main
   paths:
     include:
-    - django-webapp
-    - pipelines
-    - azure-pipelines.yml
+      - pipelines
+      - azure-pipelines.yml
 
 variables:
   - group: django_gh
@@ -17,14 +13,8 @@ variables:
 pool:
   vmImage: ubuntu-latest
 
-resources:
-  repositories:
-    - repository: self
-      type: github
-      endpoint: Mauwii
-      name: mauwii/django_devops
-
 stages:
+
   - stage: ValidateBicep
     dependsOn:
     displayName: Bicep Validation
@@ -44,3 +34,14 @@ stages:
             submodules: true
             persistCredentials: true
           - template: build_webapp.yml
+
+  - stage: RunTests
+    dependsOn: BuildWebApp
+    displayName: Run Tests
+    jobs:
+      - job: RunTests
+        displayName: Run Django Tests
+        steps:
+          - checkout: self
+            submodules: true
+          - template: run_tests.yml
