--- a/pipelines/run_tests.yml
+++ b/pipelines/run_tests.yml
@@ -6,14 +6,14 @@ steps:
       versionSpec: '3.9'
       addToPath: true
       architecture: 'x64'
-  
+
   - task: Bash@3
     displayName: 'Install Requirements'
     inputs:
       targetType: inline
-      script: 'pip install -r requirements'
+      script: 'pip install -r requirements.txt'
       workingDirectory: '$(projectRoot)'
-  
+
   - task: Bash@3
     displayName: 'Run Django Tests'
     inputs:
