change publish_docs trigger to stable

--- a/pipelines/publish_docs.yml
+++ b/pipelines/publish_docs.yml
@@ -1,13 +1,6 @@
+# only build for stable release
 trigger:
-  branches:
-    exclude:
-      - '*'
-    include:
-      - main
-  paths:
-    include:
-      - docs
-      - mkdocs.yml
+- stable
 
 pool:
   vmImage: ubuntu-latest
