--- a/pipelines/validate_pr.yml
+++ b/pipelines/validate_pr.yml
@@ -34,16 +34,17 @@ stages:
             submodules: true
             persistCredentials: true
           - template: build_webapp.yml
-
-  - stage: RunTests
-    dependsOn: BuildWebApp
-    displayName: Run Tests
-    jobs:
-      - job: RunTests
-        displayName: Run Django Tests
-        variables:
-          - group: django-dev
-        steps:
-          - checkout: self
-            submodules: true
           - template: run_tests.yml
+
+  # - stage: RunTests
+  #   dependsOn: BuildWebApp
+  #   displayName: Run Tests
+  #   jobs:
+  #     - job: RunTests
+  #       displayName: Run Django Tests
+  #       variables:
+  #         - group: django-dev
+  #       steps:
+  #         - checkout: self
+  #           submodules: true
+  #         - template: run_tests.yml
