--- a/pipelines/run_tests.yml
+++ b/pipelines/run_tests.yml
@@ -20,7 +20,7 @@ steps:
       targetType: inline
       script: |
         source antenv/bin/activate
-        [[ -n $SECRET_KEY ]] && echo "SECRET_KEY is not empty" || export SECRET_KEY=$(SECRET_KEY)
+        [[ -n $SECRET_KEY ]] && echo "SECRET_KEY is not empty" || export SECRET_KEY=$(secretKey)
         python3 manage.py test
       workingDirectory: '$(projectRoot)'
     env:
