set validate_pr trigger to main

--- a/pipelines/validate_pr.yml
+++ b/pipelines/validate_pr.yml
@@ -1,10 +1,5 @@
 pr:
-  drafts: true
-  autoCancel: false
-  paths:
-    include:
-      - pipelines
-      - azure-pipelines.yml
+- main
 
 variables:
   - group: django_gh
