--- a/pipelines/validate_pr.yml
+++ b/pipelines/validate_pr.yml
@@ -1,5 +1,7 @@
 pr:
 - main
+- feature/*
+- issue/*
 
 variables:
   - group: django_gh
@@ -30,16 +32,3 @@ stages:
             persistCredentials: true
           - template: build_webapp.yml
           - template: run_tests.yml
-
-  # - stage: RunTests
-  #   dependsOn: BuildWebApp
-  #   displayName: Run Tests
-  #   jobs:
-  #     - job: RunTests
-  #       displayName: Run Django Tests
-  #       variables:
-  #         - group: django-dev
-  #       steps:
-  #         - checkout: self
-  #           submodules: true
-  #         - template: run_tests.yml
