--- a/pipelines/workitem_poster.yml
+++ b/pipelines/workitem_poster.yml
@@ -1,7 +1,9 @@
 steps:
-- task: Bash@3
-  inputs:
-    script: | # Access Token should need Build Read, Work Item Read & Write, Member Entitlement Management Read
+  - task: Bash@3
+    inputs:
+      targetType: inline
+      script: |
+        # Access Token should need Build Read, Work Item Read & Write, Member Entitlement Management Read
         curl -u test@test.com:access-token-xxxxxxxxxxx https://dev.azure.com/{organisation}/{project}/_apis/build/builds/$(build.buildId)/workitems?api-version=6.0 | jq '.value[] | .id' |
         while IFS=$"\n" read -r c; do
           wid=$(echo $c | tr -dc '0-9')
@@ -11,4 +13,4 @@ steps:
           curl -u test@test.com:access-token-xxxxxxxxxxx https://dev.azure.com/{organisation}/{project}/_apis/wit/workItems/$wid/comments?api-version=6.0-preview.3 -X POST --data '{"text": "Build $(Build.BuildNumber) completed with status: $(Agent.JobStatus)"}' -H 'Content-Type: application/json'
           echo
         done
-  displayName: 'Post status to work items'
+    displayName: 'Post status to work items'
