- update vscode settings - add azure-pipelilnes-schema - add extensions

--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,10 +1,27 @@
 {
   "yaml.schemas": {
     "https://squidfunk.github.io/mkdocs-material/schema.json": "mkdocs.yml",
+    "https://json.schemastore.org/prettierrc.json": ".prettierrc"
   },
   "files.associations": {
-    "**/pipelines/*.yml": "azure-pipelines",
+    "**/pipelines/**/*.yml": "azure-pipelines"
   },
-  // found at https://dev.azure.com/<ORGANISATION>/_apis/distributedtask/yamlschema
-  "azure-pipelines.customSchemaFile": "../my-schema.json"
+  "azure-pipelines.customSchemaFile": "./.vscode/azure-pipelines-schema.json",
+  "[azure-pipelines]": {
+    "editor.defaultFormatter": "esbenp.prettier-vscode",
+    "editor.formatOnSave": true,
+    "gitlens.codeLens.scopes": ["document"],
+    "editor.insertSpaces": true,
+    "editor.tabSize": 2,
+    "editor.quickSuggestions": {
+      "other": true,
+      "comments": false,
+      "strings": true
+    },
+    "editor.autoIndent": "advanced"
+  },
+  "[markdown]": {
+    "editor.defaultFormatter": "yzhang.markdown-all-in-one",
+    "editor.formatOnSave": true
+  }
 }
