--- a/pipelines/publish_docs.yml
+++ b/pipelines/publish_docs.yml
@@ -1,6 +1,8 @@
-# only build for stable release
+# only publish Docs for stable release
 trigger:
   - stable
+
+pr: none
 
 pool:
   vmImage: ubuntu-latest
