add condition to tasks in build_artifact template it should only build and publish artifacts for stable branch

--- a/pipelines/publish_artifact.yml
+++ b/pipelines/publish_artifact.yml
@@ -1,6 +1,7 @@
 steps:
   - task: ArchiveFiles@2
     displayName: 'Create Build Artifact'
+    condition: and(contains(variables['build.sourceBranch'], 'refs/heads/stable'), succeeded())
     inputs:
       rootFolderOrFile: '$(projectRoot)'
       includeRootFolder: false
@@ -9,6 +10,7 @@ steps:
       replaceExistingArchive: true
 
   - task: PublishBuildArtifacts@1
+    condition: and(contains(variables['build.sourceBranch'], 'refs/heads/stable'), succeeded())
     inputs:
       PathtoPublish: '$(Build.ArtifactStagingDirectory)/$(Build.BuildId).zip'
       ArtifactName: 'drop'
