--- a/pipelines/publish_docs.yml
+++ b/pipelines/publish_docs.yml
@@ -1,6 +1,6 @@
 # only publish Docs for stable release
 trigger:
-  - stable
+  - main
 
 pr: none
 
@@ -9,8 +9,10 @@ pool:
 
 steps:
   - checkout: self
-    submodules: 'true'
+    submodules: none
     persistCredentials: 'true'
+
+  - script: 'git submodule update --init --recursive mkdocs-material'
 
   - task: UsePythonVersion@0
     displayName: 'Use Python 3.9.x'
