exclude feature/experimental/* from validate_pr

--- a/pipelines/validate_pr.yml
+++ b/pipelines/validate_pr.yml
@@ -8,6 +8,8 @@ pr:
       - main
       - feature/*
       - issue/*
+    exclude:
+      - feature/experimental/*
 
 variables:
   - group: django_gh
