--- a/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
+++ b/.github/ISSUE_TEMPLATE/BUG_REPORT.yml
@@ -10,10 +10,10 @@ body:
       label: Is there an existing issue for this?
       description: Please search to see if an issue already exists for the bug you encountered.
       options:
-      - label: I have searched the existing issues
-        required: true
+        - label: I have searched the existing issues
+          required: true
   - type: input
-    id: jiraissue
+    id: Jira_Issue
     attributes:
       label: Jira Issue
       description: If there is already a open issue in Jira, please enter the issue's ID surrounded in Brackets [], otherwise leave empty.
@@ -42,7 +42,7 @@ body:
     validations:
       required: true
   - type: input
-    id: failedrun
+    id: Failed_Runs
     attributes:
       label: Link to a failed run of the pipeline
       description: Please open a failed pipeline run, copy the URL and paste it here.
