--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -1,13 +1,16 @@
 {
   "yaml.schemas": {
     "https://squidfunk.github.io/mkdocs-material/schema.json": "mkdocs.yml",
-    "https://json.schemastore.org/prettierrc.json": ".prettierrc"
+    "https://json.schemastore.org/prettierrc.json": ".prettierrc",
+    "https://json.schemastore.org/github-issue-config.json": ".github/ISSUE_TEMPLATE/config.yml",
+    "https://raw.githubusercontent.com/microsoft/azure-pipelines-vscode/main/service-schema.json": "azure-pipelines/**/*.yml"
   },
   "files.associations": {
-    "**/pipelines/**/*.yml": "azure-pipelines"
+    "**/azure-pipelines/**/*.yml": "azure-pipelines"
   },
-  "azure-pipelines.customSchemaFile": "./.vscode/azure-pipelines-schema.json",
+  "azure-pipelines.customSchemaFile": ".vscode/azure-pipelines-schema.json",
   "[azure-pipelines]": {
+    "editor.detectIndentation": false,
     "editor.defaultFormatter": "esbenp.prettier-vscode",
     "editor.formatOnSave": true,
     "gitlens.codeLens.scopes": ["document"],
@@ -18,7 +21,7 @@
       "comments": false,
       "strings": true
     },
-    "editor.autoIndent": "advanced"
+    "editor.autoIndent": "full"
   },
   "[markdown]": {
     "editor.defaultFormatter": "yzhang.markdown-all-in-one",
